# ZealGen

./: .env.example  .gitignore  DocuGen.spec  README.md  ZealGen.spec  pyproject.toml
docTest/: SDL3.docset.links.txt
docs/: architecture.md  frontpage_handling.md  index.md
gui_builder/: DocuGen.spec  ZealGen.spec  build.py
src/docugen/: app.py  cli.py  core.py  docugen.spec  main.py  main.spec
src/docugen/assets/: rewrite.py
src/docugen/docset/: builder.py  incremental.py  index.py
src/docugen/fetch/: base.py  httpx_fetcher.py  playwright_fetcher.py  qt_fetcher.py
src/docugen/parsers/: base.py  docusaurus.py  generic.py  rustdoc.py  sphinx.py
src/docugen/utils/: url.py
src/zealgen/: app.py  cli.py  core.py  main.spec  zealgen.spec
src/zealgen/assets/: rewrite.py
src/zealgen/docset/: builder.py
src/zealgen/fetch/: base.py  httpx_fetcher.py  playwright_fetcher.py  qt_fetcher.py
src/zealgen/utils/: url.py
tests/: test_assets.py  test_docset_builder.py  test_parsers.py  test_repro.py  test_utils_url.py
