[project]
name = "docugen"
version = "0.1.0"
description = "Qt6 tool to generate Zeal docsets from URLs"
requires-python = ">=3.11"

dependencies = [
    "pyside6>=6.7",
    "requests",
    "beautifulsoup4",
    "lxml",
    "httpx",
    "playwright",
    "anyio",
    "python-dotenv",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["src/docugen"]

[project.scripts]
docugen = "docugen.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
